# libtorrent_wrapper

./: .gitignore  CMakeLists.txt  README.md  libtorrent.in
wrapper/include/: Download.h
wrapper/include/queue/: QueueManager.h
wrapper/include/queue/stream/: FileStream.h  Stream.h
wrapper/include/torrent/: Torrenter.h
wrapper/src/: main.cpp
wrapper/src/queue/: QueueManager.cpp
wrapper/src/queue/stream/: FileStream.cpp
wrapper/src/targets/: torrent_add.cpp  torrent_rm.cpp  torrent_start.cpp
wrapper/src/torrent/: Torrenter.cpp
wrapper/tests/mocks/: StringStream.h  StringStreamTest.cpp
wrapper/tests/queue/: QueueManagerTest.cpp
